--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "next": "12.3.0",
+    "next-i18next": "^12.0.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.2",
+    "redux-persist": "^6.0.0",
+    "sass": "^1.54.9"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
@@ -19,6 +24,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
-    "typescript": "4.8.3"
+    "typescript": "4.8.3",
+    "webpack": "^5.74.0"
   }
 }
