--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,6 +10,6 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install packages
-        run: npm ci
+        run: yarn ci
       - name: Run ESlint
         run: yarn lint
