--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,3 +13,5 @@ jobs:
         run: rm -rf node_modules && yarn install --frozen-lockfile
       - name: Run ESlint
         run: yarn lint
+      - name: Build
+        run: yarn build
