--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "allowJs": true,
     "paths": {
       "@/components/*": ["components/*"],
-      "@/public/*": ["public/*"]
+      "@/public/*": ["public/*"],
+      "@/redux/*": ["redux/*"]
     },
     "skipLibCheck": false,
     "strict": true,
